<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <Button
        android:id="@+id/more_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/profile_image"
        android:background="@color/bg_color"
        android:text="@string/more_items"
        android:textColor="@color/orange" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="15dp"
        android:contentDescription="@string/image"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:src="@drawable/profile" />

    <EditText
        android:id="@+id/disk_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/profile_image"
        android:ems="10"
        android:hint="@string/disk_title" />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/disk_title"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/description" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/search_pictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/disk_image"
        android:layout_alignRight="@+id/profile_image"
        android:background="@color/bg_color"
        android:text="@string/search_pictures"
        android:textColor="@color/orange" />

    <EditText
        android:id="@+id/send_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/disk_image"
        android:hint="@string/send_to"
        android:layout_marginTop="20dp"
        android:ems="10" />

    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_to"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/orange"
        android:text="@string/upload"
        android:textColor="@color/white"
        android:textSize="@dimen/button_textr" />

    <ImageView
        android:id="@+id/disk_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/description"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/image"
        android:src="@drawable/disk" />

</RelativeLayout>