<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <Button
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/reject"
        android:layout_alignBottom="@+id/reject"
        android:layout_alignLeft="@+id/message"
        android:background="@color/orange"
        android:text="@string/accept"
        android:textColor="@color/white"
        android:textSize="@dimen/button_textr" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView2"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="14dp"
        android:text="@string/disk_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red" />

    <EditText
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_below="@+id/title"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/message"
        android:textColor="@color/blue" >

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/accept"
        android:layout_marginTop="46dp"
        android:contentDescription="@string/image"
        android:src="@drawable/disk" />

    <Button
        android:id="@+id/reject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/message"
        android:layout_below="@+id/message"
        android:layout_marginTop="42dp"
        android:background="@color/red"
        android:text="@string/reject"
        android:textColor="@color/white"
        android:textSize="@dimen/button_textr" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title"
        android:layout_alignLeft="@+id/reject"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="19dp"
        android:contentDescription="@string/image"
        android:src="@drawable/user" />

</RelativeLayout>