<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/search_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:src="@drawable/search" />

    <EditText
        android:id="@+id/search_text"
        android:layout_width="248dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/search_items"
        android:layout_toRightOf="@+id/search_items"
        android:background="@color/white"
        android:ems="10"
        android:inputType="text"
        android:text="@string/search_bar"
        android:textColor="@color/blue" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_items"
        android:contentDescription="@string/image"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:src="@drawable/profile" />

    <ListView
        android:id="@+id/my_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profile_image"
        android:layout_below="@+id/profile_image" />

    <Button
        android:id="@+id/new_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/profile_image"
        android:layout_alignRight="@+id/search_text"
        android:background="@color/bg_color"
        android:text="@string/new_item"
        android:textColor="@color/orange" />

    <Button
        android:id="@+id/more_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/profile_image"
        android:background="@color/bg_color"
        android:text="@string/more_items"
        android:textColor="@color/orange" />

</RelativeLayout>