<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:lines="2"
        android:text="@string/app_description"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange"
        android:textSize="17sp"
        android:textStyle="italic"
        android:typeface="sans" />

    <com.facebook.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:textSize="@dimen/button_textr" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="58dp"
        android:contentDescription="@string/description"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/splash_icon"
            android:layout_width="127dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/image"
            android:gravity="center"
            android:src="@drawable/music" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/blue"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            android:typeface="sans" />
    </LinearLayout>

</RelativeLayout>