<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <QuickContactBadge
        android:id="@+id/quickContactBadge1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="34dp"
        android:layout_marginTop="38dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/quickContactBadge1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="34dp"
        android:contentDescription="@string/image"
        android:src="@drawable/disk" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView2"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="14dp"
        android:text="@string/disk_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/your_offer" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/quickContactBadge1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="68dp"
        android:background="@color/bg_color"
        android:text="@string/send"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange" />

</RelativeLayout>