<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView2"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="14dp"
        android:text="@string/disk_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/message"
        android:textColor="@color/blue" >

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginRight="20dp"
        android:layout_marginTop="46dp"
        android:contentDescription="@string/image"
        android:src="@drawable/disk" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/button2"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/image"
        android:src="@drawable/exchange" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText3"
        android:layout_marginRight="51dp"
        android:layout_marginTop="30dp"
        android:background="@color/bg_color"
        android:text="@string/accept"
        android:textColor="@color/orange" />

</RelativeLayout>