<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

 	<ImageView
 	    android:id="@+id/imageView1"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:contentDescription="@string/image"
 	    android:src="@drawable/search" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="248dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_toRightOf="@+id/imageView1"
        android:background="@color/white"
        android:ems="10"
        android:inputType="text"
        android:text="@string/search_bar"
        android:textColor="@color/blue" />

    <QuickContactBadge
        android:id="@+id/quickContactBadge1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="22dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/quickContactBadge1"
        android:layout_alignLeft="@+id/editText1"
        android:contentDescription="@string/image"
        android:src="@drawable/disk" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/item_cond"
        android:textColor="@color/blue" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/interested_in"
        android:textColor="@color/blue" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignLeft="@+id/editText3"
        android:background="@color/bg_color"
        android:text="@string/interested"
        android:textColor="@color/orange" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/quickContactBadge1"
        android:layout_below="@+id/editText3"
        android:layout_marginRight="33dp"
        android:layout_marginTop="42dp"
        android:background="@color/bg_color"
        android:text="@string/delete"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView2"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="14dp"
        android:text="@string/disk_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red" />

</RelativeLayout>