<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <TextView
            android:id="@+id/selection_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selection_profile_pic"
            android:paddingLeft="15dp"
            android:layout_marginLeft="10dp"
            android:textColor="#333"
            android:textSize="18sp" />
    
    <ListView
        android:id="@+id/my_items"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/selection_profile_pic"
        android:layout_below="@+id/selection_profile_pic"
        android:divider="#b5b5b5"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/list_selector"
        android:paddingTop="25dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_item"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:background="@color/bg_color"
        android:text="@string/view_offers"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange" />

    <Button
        android:id="@+id/more_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="21dp"
        android:layout_toRightOf="@+id/selection_profile_pic"
        android:background="@color/bg_color"
        android:text="@string/more_items"
        android:textColor="@color/orange" />

    <Button
        android:id="@+id/new_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/selection_profile_pic"
        android:layout_alignLeft="@+id/button1"
        android:background="@color/orange"
        android:text="@string/new_item"
        android:textColor="@color/white"
        android:textSize="@dimen/button_textr" />

    <com.facebook.widget.ProfilePictureView
        android:id="@+id/selection_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/selection_user_name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal"
        facebook:preset_size="normal" >
    </com.facebook.widget.ProfilePictureView>

</RelativeLayout>

